# fast-srgb8

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  sse2.rs
